Fix todo description ellipsis - remove display block
- Remove display: block from .todo-desc-inline CSS
- Flex items should not have display: block for ellipsis to work
- Now text-overflow: ellipsis will properly truncate long descriptions

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -596,7 +596,6 @@ header h1 {
     font-size: 0.9em;
     flex: 1;
     min-width: 0;
-    display: block;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
